trad arbre conseil

--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -15,7 +15,7 @@
  trading_haute_frequence_reform_desc:0 "Les marchands du monde entier ont entendu parler de la puissance Osallekine, les marchandises affluent dans nos ports."
  religious_reform:0 "La sagesse religieuse"
  religious_reform_desc:0 "Grâce aux grands enseignements qui ont été découverts à Rome les prêtres du pays prêchent la bonne parole sur tout notre territoire. Tous les religieux du pays acceptent de vivre une vie simple et ne considèrent plus l'argent comme une nécessité. Nos conseillères sont recrutés dans des monastères."
- melting_pot_reform:0 "Meltin Pot"
+ melting_pot_reform:0 "Melting Pot"
  melting_pot_reform_desc:0 "Grâce au rapprochement du gouvernement avec son peuple, les coutumes de chacun ont pu être assimilées et respectées."
  time_is_money_reform:0 "Assimilation portugaise"
  time_is_money_reform_desc:0 "Le recrutement de maçon portugais permet au pays de construire plus en moins de temps, améliorant ainsi notre production de matières première. Grâce a l'ISF mis en place nous récoltons maintenant plus d'impôts."
@@ -64,26 +64,26 @@
  LOADING_TIP_102:0 "La richesse souris aux Osallekiens."
  LOADING_TIP_103:0 "Pour gagner il vous suffit simplement d'adopter la façon de penser Osallek."
  LOADING_TIP_104:0 "Un Osallek averti en tue deux."
- osallek_missions_1_1_title:0 "Test"
- osallek_missions_1_1_desc:0 "Test"
- osallek_missions_5_1_title:0 "Test"
- osallek_missions_5_1_desc:0 "Test"
- osallek_missions_5_2_title:0 "Test"
- osallek_missions_5_2_desc:0 "Test"
- osallek_missions_5_3_title:0 "Test"
- osallek_missions_5_3_desc:0 "Test"
- osallek_missions_5_4_title:0 "Test"
- osallek_missions_5_4_desc:0 "Test"
- osallek_missions_5_5_title:0 "Test"
- osallek_missions_5_5_desc:0 "Test"
- osallek_missions_5_6_title:0 "Test"
- osallek_missions_5_6_desc:0 "Test"
- osallek_missions_5_7_title:0 "Test"
- osallek_missions_5_7_desc:0 "Test"
- osallek_missions_5_8_title:0 "Test"
- osallek_missions_5_8_desc:0 "Test"
- osallek_missions_5_9_title:0 "Test"
- osallek_missions_5_9_desc:0 "Test"
- osallek_missions_5_10_title:0 "Test"
- osallek_missions_5_10_desc:0 "Test"
+ osallek_missions_1_1_title:0 "Rassembler nos forces"
+ osallek_missions_1_1_desc:0 "Nous n'avons aucune envie de rester cloitrer sur notre territoire nous devons grandir. Levons nos forces en préparations en vue des guerres qui nous animent !"
+ osallek_missions_5_1_title:0 "Engager des conseillères"
+ osallek_missions_5_1_desc:0 "[Root.GetName] se porterait bien mieux avec un peu plus de femmes dans son gouvernement."
+ osallek_missions_5_2_title:0 "Enseigner aux enseigantes"
+ osallek_missions_5_2_desc:0 "Améliorer les connaissances de nos conseillères nous permet de diriger encore mieux [Root.GetName]"
+ osallek_missions_5_3_title:0 "Engranger le savoir"
+ osallek_missions_5_3_desc:0 "Plus nos conseillères seront instruites plus [Root.GetName] sera prospère"
+ osallek_missions_5_4_title:0 "Accroître notre sagesse"
+ osallek_missions_5_4_desc:0 "La sagesse vaut mieux que la force"
+ osallek_missions_5_5_title:0 "Cultiver le présent"
+ osallek_missions_5_5_desc:0 "Cultive ton présent avec sagesse et sans relâche, pour conjuguer ton avenir au futur plaisant."
+ osallek_missions_5_6_title:0 "Apprendre, apprendre, apprendre..."
+ osallek_missions_5_6_desc:0 "Il n'y a pas de fin a l'apprentissage que l'apprentissage lui même. Un vrai Maître est un éternel étudiant."
+ osallek_missions_5_7_title:0 "Maitriser les connaissances"
+ osallek_missions_5_7_desc:0 "La connaissance est en elle-même puissance."
+ osallek_missions_5_8_title:0 "S'assurer un avenir"
+ osallek_missions_5_8_desc:0 "Le flirt avec l'avenir est le pire des conformismes, la lâche flatterie du plus fort. Car l'avenir est toujours plus fort que le présent. C'est bien lui, en effet, qui nous jugera. Et certainement sans aucune compétence."
+ osallek_missions_5_9_title:0 "Acquérir un savoir inégalé"
+ osallek_missions_5_9_desc:0 "Plus personne ne sait vraiment dire ce que nos conseillères pourrait ne pas savoir."
+ osallek_missions_5_10_title:0 "Terminer leur enseignement"
+ osallek_missions_5_10_desc:0 "Nous avons enfin réussi à avoir des sages femmes."
  HAS_AT_LEAST_COALITION_MEMBERS:0 "Cible d'une coalition qui compte au moins $VAL$ membres."
