--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -83,7 +83,7 @@
  osallek_missions_5_8_title:0 "S'assurer un avenir"
  osallek_missions_5_8_desc:0 "Le flirt avec l'avenir est le pire des conformismes, la lâche flatterie du plus fort. Car l'avenir est toujours plus fort que le présent. C'est bien lui, en effet, qui nous jugera. Et certainement sans aucune compétence."
  osallek_missions_5_9_title:0 "Acquérir un savoir inégalé"
- osallek_missions_5_9_desc:0 "Plus personne ne sait vraiment dire ce que nos conseillères pourrait ne pas savoir."
+ osallek_missions_5_9_desc:0 "Plus personne ne sait vraiment dire ce que nos conseillères pourraient ne pas savoir."
  osallek_missions_5_10_title:0 "Terminer leur enseignement"
  osallek_missions_5_10_desc:0 "Nous avons enfin réussi à avoir des sages femmes."
  HAS_AT_LEAST_COALITION_MEMBERS:0 "Cible d'une coalition qui compte au moins $VAL$ membres."
