--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -85,5 +85,5 @@
  osallek_missions_5_9_title:0 "Acquérir un savoir inégalé"
  osallek_missions_5_9_desc:0 "Plus personne ne sait vraiment dire ce que nos conseillères pourraient ne pas savoir."
  osallek_missions_5_10_title:0 "Terminer leur enseignement"
- osallek_missions_5_10_desc:0 "Nous avons enfin réussi à avoir des sages femmes."
+ osallek_missions_5_10_desc:0 "Nous avons enfin atteint l'omniscience."
  HAS_AT_LEAST_COALITION_MEMBERS:0 "Cible d'une coalition qui compte au moins $VAL$ membres."
