--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -69,14 +69,14 @@
  osallek_missions_5_1_title:0 "Engager des conseillères"
  osallek_missions_5_1_desc:0 "[Root.GetName] se porterait bien mieux avec un peu plus de femmes dans son gouvernement."
  osallek_missions_5_2_title:0 "Enseigner aux enseigantes"
- osallek_missions_5_2_desc:0 "Améliorer les connaissances de nos conseillères nous permet de diriger encore mieux [Root.GetName]"
+ osallek_missions_5_2_desc:0 "Améliorer les connaissances de nos conseillères nous permet d'encore mieux diriger [Root.GetName]."
  osallek_missions_5_3_title:0 "Engranger le savoir"
- osallek_missions_5_3_desc:0 "Plus nos conseillères seront instruites plus [Root.GetName] sera prospère"
+ osallek_missions_5_3_desc:0 "Plus nos conseillères seront instruites plus [Root.GetName] sera prospère."
  osallek_missions_5_4_title:0 "Accroître notre sagesse"
- osallek_missions_5_4_desc:0 "La sagesse vaut mieux que la force"
+ osallek_missions_5_4_desc:0 "La sagesse vaut mieux que la force."
  osallek_missions_5_5_title:0 "Cultiver le présent"
  osallek_missions_5_5_desc:0 "Cultive ton présent avec sagesse et sans relâche, pour conjuguer ton avenir au futur plaisant."
- osallek_missions_5_6_title:0 "Apprendre, apprendre, apprendre..."
+ osallek_missions_5_6_title:0 "Apprendre, apprendre..."
  osallek_missions_5_6_desc:0 "Il n'y a pas de fin a l'apprentissage que l'apprentissage lui même. Un vrai Maître est un éternel étudiant."
  osallek_missions_5_7_title:0 "Maitriser les connaissances"
  osallek_missions_5_7_desc:0 "La connaissance est en elle-même puissance."
