--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -65,24 +65,24 @@
  LOADING_TIP_103:0 "Pour gagner il vous suffit simplement d'adopter la façon de penser Osallek."
  LOADING_TIP_104:0 "Un Osallek averti en tue deux."
  osallek_missions_1_1_title:0 "Rassembler nos forces"
- osallek_missions_1_1_desc:0 "Nous n'avons aucune envie de rester cloitrer sur notre territoire nous devons grandir. Levons nos forces en préparations en vue des guerres qui nous animent !"
- osallek_missions_1_2_title:0 "Vassaliser les ennemis"
- osallek_missions_1_2_desc:0 "Qu'il soit question de force militaire ou diplomatique nous avons toujours été supérieur. Démontrons à nos voisins qu'il vaut mieux se rassembler sous notre bannière."
+ osallek_missions_1_1_desc:0 "Nous n'avons aucune envie de rester cloitrés sur notre territoire, nous devons grandir ! Levons nos forces en préparations des guerres qui nous animent !"
+ osallek_missions_1_2_title:0 "Vassaliser nos ennemis"
+ osallek_missions_1_2_desc:0 "Qu'il soit question de force militaire ou diplomatique, nous avons toujours été supérieurs. Démontrons à nos voisins qu'il vaut mieux se rassembler sous notre bannière."
  osallek_missions_1_3_title:0 "Quand tout va bien"
  osallek_missions_1_3_desc:0 "Tout va bien."
  osallek_missions_1_4_title:0 "Préparer nos défenses"
  osallek_missions_1_4_desc:0 "La meilleure attaque, c'est la défense."
- osallek_missions_1_5_title:0 "Equilibrer nos revenus"
+ osallek_missions_1_5_title:0 "Équilibrer nos revenus"
  osallek_missions_1_5_desc:0 "Regarde. C'est joli, n'est-ce pas ? Parfaitement équilibré, comme toute chose devrait l'être."
  osallek_missions_1_6_title:0 "Contruire toujours plus"
  osallek_missions_1_6_desc:0 "Pas de pierre : pas de construction. Pas de construction : pas de palais. Pas de palais : … pas de palais."
  osallek_missions_1_7_title:0 "Faire grandir l'empire"
  osallek_missions_1_7_desc:0 "Les femmes sont si bavardes qu'il est plus difficile de démêler leurs vérités que de gouverner un empire."
  osallek_missions_1_8_title:0 "Dominer culturellement"
- osallek_missions_1_8_desc:0 "Nos anciens ennemis sont si envieux de notre culture qu'ils s'y convertissent de plus en plus."
+ osallek_missions_1_8_desc:0 "Nos anciens ennemis sont si envieux de notre culture qu'ils l'adoptent de plus en plus."
  osallek_missions_1_9_title:0 "Partager la connaissance"
  osallek_missions_1_9_desc:0 "Une seule grande ville pour un si grand empire ce n'est pas assez, nous devons construire des palais royaux dans nos territoires conquis."
- osallek_missions_1_10_title:0 "Une grande puissance ?"
+ osallek_missions_1_10_title:0 "Une grande puissance"
  osallek_missions_1_10_desc:0 "Notre rôle de puissance mondiale n'est a présent plus contestable."
  osallek_missions_5_1_title:0 "Engager des conseillères"
  osallek_missions_5_1_desc:0 "[Root.GetName] se porterait bien mieux avec un peu plus de femmes dans son gouvernement."
