--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -84,6 +84,20 @@
  osallek_missions_1_9_desc:0 "Une seule grande ville pour un si grand empire ce n'est pas assez, nous devons construire des palais royaux dans nos territoires conquis."
  osallek_missions_1_10_title:0 "Une grande puissance"
  osallek_missions_1_10_desc:0 "Notre rôle de puissance mondiale n'est a présent plus contestable."
+ osallek_missions_2_2_title:0 "Annexer nos ennemis"
+ osallek_missions_2_2_desc:0 "Nous devons montrer la grandeur de notre nation à nos voisins. Prenons leur quelques territoires"
+ osallek_missions_2_3_title:0 "Renforcer les armées"
+ osallek_missions_2_3_desc:0 "Grâce a nos récentes conquête nous avons de la nouvelle chair fraiche prête pour le combat ! Levons des hommes et entrainons les."
+ osallek_missions_2_5_title:0 "Intestable"
+ osallek_missions_2_5_desc:0 "Qui peut nous tester ?"
+ osallek_missions_2_6_title:0 "Surpasser nos voisins"
+ osallek_missions_2_6_desc:0 "Allez-y ! Défilez, les petites fourmis. Mettez-vous bien en rang... Venez mesurer votre risible destin à celui de [Root.GetName]... Venez constater la navrante insignifiance de vos existences. Vous avez pensé que les dieux allaient enfin reconnaitre en vous le souverain que personne n'avait vu? Que vous alliez enfin donner au monde le spectacle de votre avènement ? Quel roi suis-je ? Un roi sévère ? Un roi conquérant ? Vous n'êtes rien... RIEN ! Vous retournerez chez vous comme vous en êtes partis... Anonymes ! Paisiblement, mon fils viendra reprendre ce qui est à lui... Et vous mettrez un genou en terre. Et vous baisserez les yeux. Et vous jurerez fidélité. Car c'est tout ce qu'il vous reste !"
+ osallek_missions_2_8_title:0 "Préparer les cannons"
+ osallek_missions_2_8_desc:0 "Pointe pas cette chose sur moi !"
+ osallek_missions_2_9_title:0 "Lever une vrai armée"
+ osallek_missions_2_9_desc:0 "Qui a présent peut prétendre avoir une aussi belle force de frappe ?"
+ osallek_missions_2_10_title:0 "Personne"
+ osallek_missions_2_10_desc:0 "Littéralement."
  osallek_missions_5_1_title:0 "Engager des conseillères"
  osallek_missions_5_1_desc:0 "[Root.GetName] se porterait bien mieux avec un peu plus de femmes dans son gouvernement."
  osallek_missions_5_2_title:0 "Enseigner aux enseigantes"
