--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -98,6 +98,26 @@
  osallek_missions_2_9_desc:0 "Qui a présent peut prétendre avoir une aussi belle force de frappe ?"
  osallek_missions_2_10_title:0 "Personne"
  osallek_missions_2_10_desc:0 "Littéralement."
+ osallek_missions_3_1_title:0 "Mauvaise pioche"
+ osallek_missions_3_1_desc:0 "C’est vrai ce qu’on dit, vous êtes le fils d’un démon et d’une pucelle ?... Vous avez plus pris de la pucelle."
+ osallek_missions_3_2_title:0 "Conséquences"
+ osallek_missions_3_2_desc:0 "Pour tout vous dire, je crois pas que ce soit bon pour mon autorité que mes soldats apprennent que je suis "une grosse pucelle" !"
+ osallek_missions_3_3_title:0 "Enerver les voisins"
+ osallek_missions_3_3_desc:0 "Tout ce que nous avons à décider, c'est ce que nous devons faire du temps qui nous est imparti."
+ osallek_missions_3_4_title:0 "Défier la mort"
+ osallek_missions_3_4_desc:0 "Nouvelle technique : on passe pour des cons, les autres se marrent, et on frappe. C’est nouveau. Ah non, ça c’est que nous. Parce qu’il faut être capable de passer pour des cons en un temps record. Ah non, là-dessus on a une avance considérable."
+ osallek_missions_3_5_title:0 "Problèmes d'argent"
+ osallek_missions_3_5_desc:0 "Je vous ai déjà dit que je prête du pognon à des taux vraiment pas dégueulasses ?"
+ osallek_missions_3_6_title:0 "Ne pas paniquer"
+ osallek_missions_3_6_desc:0 "Ça commence à faire un peu beaucoup là quand même !"
+ osallek_missions_3_7_title:0 "Diviser le peuple"
+ osallek_missions_3_7_desc:0 "Ils sont là, ils sont dans les campagnes, dans les villes..."
+ osallek_missions_3_8_title:0 "Perdre nos dépendances"
+ osallek_missions_3_8_desc:0 "Excusez, c’est juste pour vous dire que je vais pas pouvoir rester aujourd’hui ! Faut que je retourne à la ferme de mes vieux ! Y a ma grand-mère qui a glissé sur une bouse ! C’est le vrai merdier !"
+ osallek_missions_3_9_title:0 "On prend tout !"
+ osallek_missions_3_9_desc:0 "Mais tous ces endroits deviendront bientôt des îlots assiégés, pour peu que les choses continuent de suivre le cours qu’elles ont pris."
+ osallek_missions_3_10_title:0 "Courir vers la mort"
+ osallek_missions_3_10_desc:0 "Oh allez, mon pote ! Fais un effort ! Dans dix minutes, t'es pendu et on n'en parle plus."
  osallek_missions_5_1_title:0 "Engager des conseillères"
  osallek_missions_5_1_desc:0 "[Root.GetName] se porterait bien mieux avec un peu plus de femmes dans son gouvernement."
  osallek_missions_5_2_title:0 "Enseigner aux enseigantes"
@@ -118,4 +138,5 @@
  osallek_missions_5_9_desc:0 "Plus personne ne sait vraiment dire ce que nos conseillères pourraient ne pas savoir."
  osallek_missions_5_10_title:0 "Terminer leur enseignement"
  osallek_missions_5_10_desc:0 "Nous avons enfin atteint l'omniscience."
+
  HAS_AT_LEAST_COALITION_MEMBERS:0 "Cible d'une coalition qui compte au moins $VAL$ membres."
