--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -139,4 +139,5 @@
  osallek_missions_5_10_title:0 "Terminer leur enseignement"
  osallek_missions_5_10_desc:0 "Nous avons enfin atteint l'omniscience."
  sikhism:0 "Osallekisme"
+ sikhism_religion_desc:0 "L'Osallekisme est une religion dans laquelle les souverains sont considérés comme des dieux, apparu au XIVe siècle cette forme de vénération a pour effet de renforcer les liens entre le peuple et leurs dirigeant. Cet aspect divin des monarques donne aux armées la forme d'une armée sainte leur prodiguant ainsi le courage et la foi digne d'une croisade à chaque bataille."
  HAS_AT_LEAST_COALITION_MEMBERS:0 "Cible d'une coalition qui compte au moins $VAL$ membres."
