--- a/osallek/localisation/osallek_l_french.yml
+++ b/osallek/localisation/osallek_l_french.yml
@@ -118,6 +118,28 @@
  osallek_missions_3_9_desc:0 "Mais tous ces endroits deviendront bientôt des îlots assiégés, pour peu que les choses continuent de suivre le cours qu’elles ont pris."
  osallek_missions_3_10_title:0 "Courir vers la mort"
  osallek_missions_3_10_desc:0 "Oh allez, mon pote ! Fais un effort ! Dans dix minutes, t'es pendu et on n'en parle plus."
+ osallek_missions_3_10_title:0 "Osallek"
+ osallek_missions_3_10_desc:0 "L'empire. C'EST MOI !"
+ osallek_missions_4_sikh_1_title:0 "Maintenir de bonne relations"
+ osallek_missions_4_sikh_1_desc:0 "Nous devons garder de bonne relation avec les pratiquants de l'Osallekisme. Les dieux doivent bien s'entendre entre eux."
+ osallek_missions_4_sikh_2_title:0 "Vénérez moi"
+ osallek_missions_4_sikh_2_desc:0 "Forcer un vassal a reconnaitre le caractère divin de notre monarque."
+ osallek_missions_4_sikh_3_title:0 "Défendre la foi"
+ osallek_missions_4_sikh_3_desc:0 "Nous sommes la lumière, porteuse de la véritable parole divine. Nous sommes l'épée et le bouclier de la foi. Nous devons défendre notre nom et notre religion !"
+ osallek_missions_4_sikh_4_title:0 "Convertir les faibles"
+ osallek_missions_4_sikh_4_desc:0 "Convertissons les hérétiques a l'Osallekisme, ils doivent se soumettre ! Il ne doit rester aucun infidèle !"
+ osallek_missions_4_sikh_5_title:0 "Plus de croyants"
+ osallek_missions_4_sikh_5_desc:0 "Plus il y aura de pays qui nous vénérera plus nous serons fort, forçons les a reconnaître notre puissance !"
+ osallek_missions_4_sikh_6_title:0 "Posséder un lieu saint"
+ osallek_missions_4_sikh_6_desc:0 "Nous devons assoir notre pouvoir dans le monde et s'assurer que nos lieux saints soient entre de bonnes mains !"
+ osallek_missions_4_sikh_7_title:0 "Région de bonne foi"
+ osallek_missions_4_sikh_7_desc:0 "Toute la région de la capitale est a présent adepte de l'Osallekisme, les récits et les odes nous vénérants se multiplient dans toutes nos provinces !"
+ osallek_missions_4_sikh_8_title:0 "Le temple d'or"
+ osallek_missions_4_sikh_8_desc:0 "Nous devons nous emparer du temple d'or et le sécuriser !"
+ osallek_missions_4_sikh_9_title:0 "Domination religieuse"
+ osallek_missions_4_sikh_9_desc:0 "Notre religion est la seule possible. Brûlons les hérétiques !"
+ osallek_missions_4_sikh_10_title:0 "Ecraser les infidèles"
+ osallek_missions_4_sikh_10_desc:0 "Emparons-nous de tous les centres religieux mondiaux, sans lieu de recueil ces hérétiques seront forcés de reconnaître notre divinité unique !"
  osallek_missions_5_1_title:0 "Engager des conseillères"
  osallek_missions_5_1_desc:0 "[Root.GetName] se porterait bien mieux avec un peu plus de femmes dans son gouvernement."
  osallek_missions_5_2_title:0 "Enseigner aux enseigantes"
